--- a/AI/.obsidian/workspace
+++ b/AI/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "245b00faf70cf11c",
+        "id": "d851671932fa84d0",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Paper/Joint Multiple Intent Detection and Slot Labeling forGoal-Oriented Dialog.md",
+            "file": "Money management.md",
             "mode": "source",
             "source": false
           }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "file: senmatic",
+                "query": "",
                 "matchingCase": true,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -49,12 +49,11 @@
               }
             }
           }
-        ],
-        "currentTab": 1
+        ]
       }
     ],
     "direction": "horizontal",
-    "width": 268.5
+    "width": 464
   },
   "right": {
     "id": "074611f5e996a46c",
@@ -70,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Paper/Joint Multiple Intent Detection and Slot Labeling forGoal-Oriented Dialog.md",
+                "file": "Money management.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -97,17 +96,17 @@
     "width": 295,
     "collapsed": true
   },
-  "active": "245b00faf70cf11c",
+  "active": "d851671932fa84d0",
   "lastOpenFiles": [
-    "Paper/Joint Multiple Intent Detection and Slot Labeling forGoal-Oriented Dialog.md",
-    "multi-label classification.md",
-    "sequential labeling problem.md",
-    "semantic frame.md",
-    "AI terminology/NLP/NLG.md",
-    "sentence classification.md",
-    "AI terminology/NLP/intent.md",
-    "AI terminology/NLP/slots.md",
-    "slot-labels.md",
-    "AI terminology/NLP/intents.md"
+    "Money management.md",
+    "loại lỗi chính tả.md",
+    "Ghi sai phụ âm cuối /bán nguyên âm cuối.md",
+    "Ghi sai âm chính.md",
+    "Ghi sai âm đệm.md",
+    "Ghi sai phụ âm đầu.md",
+    "Lỗi chính tả âm vị đoạn tính.md",
+    "Lỗi chính tả âm vị siêu đoạn tính.md",
+    "Lỗi chính tả âm vị.md",
+    "Lỗi chính tả.md"
   ]
 }
